--- a/components/ui/LoginSlideshow.module.css
+++ b/components/ui/LoginSlideshow.module.css
@@ -1,8 +1,39 @@
 .each-slide > div {
+    position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-size: contain;
     background-position: center;
     height: 100vh;
     width: auto;
+}
+
+.description {
+    width: 100%;
+    text-align: left;
+    padding-left: 80px;
+    height: auto;
+    font-weight: lighter;
+    color: #fff;
+    font-size: 28px;
+    z-index: 10;
+}
+
+.mask {
+    position: absolute;
+    left: 0;
+    width: 60px;
+    height: 100%;
+    background-image: linear-gradient(to right, #fff , transparent);
+    z-index: 10;
+}
+
+.backgroundMask{
+    position: absolute;
+    width: 400px;
+    left: 0;
+    height: 100%;
+    background-image: linear-gradient(to right, #000000de , #00000000);
+
 }
